fix: alignment issue

--- a/index.css
+++ b/index.css
@@ -353,7 +353,7 @@ html {
   display: grid;
   grid-template-columns: [main-start] 1fr [main-end aside-start] .6fr [aside-end];
 
-  max-width: 128rem;
+  max-width: 131rem;
   padding: 10rem 5rem;
   margin: 0 auto;
   column-gap: 15rem;
